--- a/_posts/2018-12-12-tsp.md
+++ b/_posts/2018-12-12-tsp.md
@@ -46,10 +46,10 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>Branch and Bound is bound to give us the optimal solution if run for eternity. While it is correct it is very slow.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<img src="/images/2018-12-12-tsp/BnB1.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/BnB2.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/BnB3.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/BnB4.png" class="col-md-4">
+<img src="/images/2018-12-12-tsp/BnB1.png" class="col-md-5">
+<img src="/images/2018-12-12-tsp/BnB2.png" class="col-md-6">
+<!-- <img src="/images/2018-12-12-tsp/BnB3.png" class="col-md-4">
+<img src="/images/2018-12-12-tsp/BnB4.png" class="col-md-4"> -->
 </div>
 <h3 id="heuristics-with-approximation-guarantees-1">Heuristics with Approximation Guarantees</h3>
 <p>Since we are dealing with a Euclidean problem, We employed the Christodes Algorithms <span class="citation">(Christofides 1976)</span> that approximates the optimal tour to be close to the MST of the graph. It gurantees a solution that is atmost <span class="math inline">1.5</span> times the optimal tour cost.</p>
@@ -58,9 +58,9 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>We compute the Euler tour of <span class="math inline"><em>T</em>*</span> and then cut short on the already visited nodes. This generates a Hamiltonian Path on the original graph.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<img src="/images/2018-12-12-tsp/Approx1.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/Approx2.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/Approx3.png" class="col-md-4">
+<img src="/images/2018-12-12-tsp/Approx1.png" class="col-md-6">
+<img src="/images/2018-12-12-tsp/Approx2.png" class="col-md-6">
+<!-- <img src="/images/2018-12-12-tsp/Approx3.png" class="col-md-4"> -->
 </div>
 <h4 id="complexity">Complexity</h4>
 <p>The generation of MST takes about <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>))</span> time. The minimal match algorithm runs in <span class="math inline"><em>O</em>(<em>E</em>)=<em>O</em>(<em>V</em><sup>2</sup>)</span> time and the loop at 9 takes a total time <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup>)</span>. Hence this algorithm runs in <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>))</span> time and our experiments agree. It also utilized a space proportional to input <span class="math inline"><em>O</em>(<em>V</em>)</span>. In all of our runs the approximation is really good with the solution quality being <span class="math inline">&lt;1.2<em>O</em><em>P</em><em>T</em></span>.</p>
@@ -97,9 +97,11 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>This algorithm is first of it’s kind and easy to understand. It is a great help for students to understand the local search paradigm.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<img src="/images/2018-12-12-tsp/LS11.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/LS12.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/LS13.png" class="col-md-4">
+<img src="/images/2018-12-12-tsp/LSA.png" class="col-md-6">
+<!-- </div><div class="row">
+<img src="/images/2018-12-12-tsp/LS12.png" class="col-md-6">
+</div><div class="row">
+<img src="/images/2018-12-12-tsp/LS13.png" class="col-md-6"> -->
 </div>
 <h4 id="time-and-space-complexity">Time and Space complexity</h4>
 <p>A two OPT swap is upper bounded by O(V). We are doing <span class="math inline"><em>V</em><sup>2</sup></span> 2-opt swaps for any random input. That is the cost of the searching single neighborhood is <span class="math inline"><em>O</em>(<em>V</em><sup>3</sup>)</span>. The algorithm doesn’t terminate after searching the single neighborhood. If it found a better solution within the neighbors of our input, algorithm updates input to found better solution and iterates till there is no improvement or time out. It is hard to tell practical upper bound of the improvement loop. Since we have time out, in our case that is a constant time. But it can end up taking exponential time to find the local minimum. And hence our specific 2-opt implementation with timeout has a complexity of <span class="math inline"><em>O</em>(<em>V</em><sup>3</sup>)</span> per search. Note that without the timeout, complexity will be much higher.</p>
@@ -108,8 +110,8 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p><em>T</em>o apply SA to solve TSP, we explored the TSP’s search space using 3-opt exchange, i.e. three unique and non-neighboring edges are deleted, and their nodes are partially swapped. To increase the probability of escaping from local maximal, we used reheating when the temperature reaches a threshold at low temperatures. The pseudo code and manually-tuned parameters of our SA algorithm for TSP is listed below.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<div class="col-md-4"></div>
-<img src="/images/2018-12-12-tsp/LS21.png" class="col-md-4">
+<!-- <div class="col-md-4"></div> -->
+<img src="/images/2018-12-12-tsp/LS21.png" class="col-md-6">
 <div class="col-md-4"></div>
 </div>
 <h4 id="complexities">Complexities</h4>
