--- a/_posts/2016-09-26-whos-hat.md
+++ b/_posts/2016-09-26-whos-hat.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Criticism against counter example by Rosenkrantz against Instance Confirmation"
+title: "Who's Hat Am I Wearing?"
 date: 2016-09-26
 excerpt: "Nicod's criterion is one of the fundamental concepts of the theory of confirmation. It is also center to the famous 'Raven Paradox', and attempts have been made to debunk it. One such counter example was provided by Rosenkrantz to show that instance confirmation leads to paradoxical states. However I believe that the paradox stated by Rosenkrantz is just apparent and can be resolved by the notion of logically conceived observations. "
 comments: true
