--- a/_posts/2018-12-12-tsp.md
+++ b/_posts/2018-12-12-tsp.md
@@ -10,7 +10,7 @@ mathjax: true
 tags: algorithms complexity
 feature: "/images/2018-12-12-tsp/Salesman.png"
 ---
-<h2 id="introduction">Introduction</h2>
+<!-- <h2 id="introduction">Introduction</h2> -->
 <p>The Traveling Salesman Problem (TSP), a NP-hard graph problem, is known as one of the most widely studied combinatorial optimization problems. One common interpretation of TSP is that of determining the shortest tour of a salesman through n cities. Some practical applications of TSP include: a) computer writing(Lenstra and Rinnooy Kan<span class="citation">(Lenstra and Kan 1975)</span>, 1975)), b) wall paper cutting(Garfinkel, 1977)<span class="citation">(Garfinkel 1977)</span>, c)hole punching (Reinelt, 1989)<span class="citation">(Reinelt 1992)</span>, d) Job sequencing, e) Dartboard design (Eiselt and Laporte, 1991)<span class="citation">(Blazewicz et al. 1991)</span>, f) Crystallography (Bland and Shallcross, 1989)<span class="citation">(Bland and Shallcross 1989)</span>.</p>
 <p>There are two types of TSP : symmetric and asymmetric TSP. In the symmetric TSP, the distance between two vertices is the same in either direction. In the asymmetric TSP, paths might not exist in both directions or the distances in the opposite directions might be different. In this paper, we experimented and compared different algorithms to solve symmetric TSP, including Branch and Bound, Heuristics with Approximation Guarantees, Local Search and Hybrid Algorithm.</p>
 <h2 id="problem">Problem</h2>
