--- a/_posts/2016-09-26-whos-hat.md
+++ b/_posts/2016-09-26-whos-hat.md
@@ -6,7 +6,7 @@ excerpt: "Nicod's criterion is one of the fundamental concepts of the theory of 
 comments: true
 mathjax: true
 tags: philosophy instance-confirmation confirmation-theory
-feature: "/images/2016-09-26-criticism-against-rosenkrantz-example-against-nicod/feature.png"
+feature: "{{ site.url }}{{ site.baseurl }}/images/2016-09-26-criticism-against-rosenkrantz-example-against-nicod/feature.png"
 ---
 
 ## Nicod's Criterion
