--- a/_posts/2018-12-12-tsp.md
+++ b/_posts/2018-12-12-tsp.md
@@ -8,7 +8,7 @@ excerpt: '
 comments: true
 mathjax: true
 tags: algorithms complexity
-feature: "/images/2018-12-12-tsp/Salesman.png"
+feature: "{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Salesman.png"
 ---
 <!-- <h2 id="introduction">Introduction</h2> -->
 <p>The Traveling Salesman Problem (TSP), a NP-hard graph problem, is known as one of the most widely studied combinatorial optimization problems. One common interpretation of TSP is that of determining the shortest tour of a salesman through n cities. Some practical applications of TSP include: a) computer writing(Lenstra and Rinnooy Kan<span class="citation">(Lenstra and Kan 1975)</span>, 1975)), b) wall paper cutting(Garfinkel, 1977)<span class="citation">(Garfinkel 1977)</span>, c)hole punching (Reinelt, 1989)<span class="citation">(Reinelt 1992)</span>, d) Job sequencing, e) Dartboard design (Eiselt and Laporte, 1991)<span class="citation">(Blazewicz et al. 1991)</span>, f) Crystallography (Bland and Shallcross, 1989)<span class="citation">(Bland and Shallcross 1989)</span>.</p>
@@ -30,7 +30,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>A brute force way to find the minimal tour is to compute all possible tours and find the minimum weight one. Given that there are <span class="math inline"><em>N</em> − 1!</span> possible tours, it would take about <span class="math inline"><em>O</em>(<em>N</em> − 1!)</span> time to complete this. Consider a machine that makes <span class="math inline">10</span> billion computations every second (10 Ghz processor). It would take millions of years to compute even for 30 nodes.</p>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/Complexity.svg" alt="Physical Running Time" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Complexity.svg" alt="Physical Running Time" />
 <p class="caption">Physical Running Time<span data-label="fig:physruntime"></span></p>
 </div></div>
 <p>Therefore it is not a feasible way to compute all possible tours. Hence we give this search among all possible solutions a structure and try to discard any tours as and when seen fit. For this we generate the tours organically by incrementally choosing (and rejecting) a node. Every time a node is chosen (or rejected) the problem becomes smaller, by accepting the existence (or absence) of the nodes that were chronologically considered before it. Hence we have to now explore a smaller problem.</p>
@@ -46,10 +46,10 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>Branch and Bound is bound to give us the optimal solution if run for eternity. While it is correct it is very slow.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<img src="/images/2018-12-12-tsp/BnB1.png" class="col-md-5">
-<img src="/images/2018-12-12-tsp/BnB2.png" class="col-md-6">
-<!-- <img src="/images/2018-12-12-tsp/BnB3.png" class="col-md-4">
-<img src="/images/2018-12-12-tsp/BnB4.png" class="col-md-4"> -->
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/BnB1.png" class="col-md-5">
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/BnB2.png" class="col-md-6">
+<!-- <img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/BnB3.png" class="col-md-4">
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/BnB4.png" class="col-md-4"> -->
 </div>
 <h3 id="heuristics-with-approximation-guarantees-1">Heuristics with Approximation Guarantees</h3>
 <p>Since we are dealing with a Euclidean problem, We employed the Christodes Algorithms <span class="citation">(Christofides 1976)</span> that approximates the optimal tour to be close to the MST of the graph. It gurantees a solution that is atmost <span class="math inline">1.5</span> times the optimal tour cost.</p>
@@ -58,9 +58,9 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>We compute the Euler tour of <span class="math inline"><em>T</em>*</span> and then cut short on the already visited nodes. This generates a Hamiltonian Path on the original graph.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<img src="/images/2018-12-12-tsp/Approx1.png" class="col-md-6">
-<img src="/images/2018-12-12-tsp/Approx2.png" class="col-md-6">
-<!-- <img src="/images/2018-12-12-tsp/Approx3.png" class="col-md-4"> -->
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Approx1.png" class="col-md-6">
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Approx2.png" class="col-md-6">
+<!-- <img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Approx3.png" class="col-md-4"> -->
 </div>
 <h4 id="complexity">Complexity</h4>
 <p>The generation of MST takes about <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>))</span> time. The minimal match algorithm runs in <span class="math inline"><em>O</em>(<em>E</em>)=<em>O</em>(<em>V</em><sup>2</sup>)</span> time and the loop at 9 takes a total time <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup>)</span>. Hence this algorithm runs in <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>))</span> time and our experiments agree. It also utilized a space proportional to input <span class="math inline"><em>O</em>(<em>V</em>)</span>. In all of our runs the approximation is really good with the solution quality being <span class="math inline">&lt;1.2<em>O</em><em>P</em><em>T</em></span>.</p>
@@ -77,8 +77,8 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="col-md-3"></div>
 
 <div class="col-md-6">
-<img style="width:66%" src="/images/2018-12-12-tsp/cross1.png"  /> 
-<img style="width:66%" src="/images/2018-12-12-tsp/cross2.png" />
+<img style="width:66%" src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/cross1.png"  /> 
+<img style="width:66%" src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/cross2.png" />
 <p class="caption">Cross resolution in a euclidean problem<span data-label="fig:cross_resolution"></span></p>
 
 </div>
@@ -97,11 +97,11 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>This algorithm is first of it’s kind and easy to understand. It is a great help for students to understand the local search paradigm.</p>
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
-<img src="/images/2018-12-12-tsp/LSA.png" class="col-md-6">
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LSA.png" class="col-md-6">
 <!-- </div><div class="row">
-<img src="/images/2018-12-12-tsp/LS12.png" class="col-md-6">
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS12.png" class="col-md-6">
 </div><div class="row">
-<img src="/images/2018-12-12-tsp/LS13.png" class="col-md-6"> -->
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS13.png" class="col-md-6"> -->
 </div>
 <h4 id="time-and-space-complexity">Time and Space complexity</h4>
 <p>A two OPT swap is upper bounded by O(V). We are doing <span class="math inline"><em>V</em><sup>2</sup></span> 2-opt swaps for any random input. That is the cost of the searching single neighborhood is <span class="math inline"><em>O</em>(<em>V</em><sup>3</sup>)</span>. The algorithm doesn’t terminate after searching the single neighborhood. If it found a better solution within the neighbors of our input, algorithm updates input to found better solution and iterates till there is no improvement or time out. It is hard to tell practical upper bound of the improvement loop. Since we have time out, in our case that is a constant time. But it can end up taking exponential time to find the local minimum. And hence our specific 2-opt implementation with timeout has a complexity of <span class="math inline"><em>O</em>(<em>V</em><sup>3</sup>)</span> per search. Note that without the timeout, complexity will be much higher.</p>
@@ -111,7 +111,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <h4 id="psuedocode">Psuedocode</h4>
 <div class="row">
 <!-- <div class="col-md-4"></div> -->
-<img src="/images/2018-12-12-tsp/LS21.png" class="col-md-6">
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS21.png" class="col-md-6">
 <div class="col-md-4"></div>
 </div>
 <h4 id="complexities">Complexities</h4>
@@ -132,27 +132,27 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>The performance of Branch and bound within limits of our of experiment is really bad. The problems start with very high error rates and hardly seem to decrease as time progresses for problems with a large number of nodes due to its exponential nature.</p>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/BnB_D_Comparison.svg" alt="Performance of Branch &amp; Bound algorithm" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/BnB_D_Comparison.svg" alt="Performance of Branch &amp; Bound algorithm" />
 <p class="caption">Performance of Branch &amp; Bound algorithm<span data-label="fig:BnB_Comparision"></span></p>
 </div></div>
 
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/BnB_Error.svg" alt="Final Errors for Branch and Bound" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/BnB_Error.svg" alt="Final Errors for Branch and Bound" />
 <p class="caption">Final Errors for Branch and Bound<span data-label="fig:BnB_ErrorBar"></span></p>
 </div></div>
 
 <h3 id="heuristics-with-approximation-guarantees-2">Heuristics with Approximation Guarantees</h3>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/Approx_TimeComplexity.svg" alt="Time Complexity of Approximation Algorithm" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Approx_TimeComplexity.svg" alt="Time Complexity of Approximation Algorithm" />
 <p class="caption">Time Complexity of Approximation Algorithm<span data-label="fig:Approx_Time"></span></p>
 </div></div>
 
 <p>The time complexity of this algorithm is computed be to be <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>))</span>. As can be seen the theoretical complexity aligns well with the physical run time. Here the <span class="math inline"><em>O</em>(<em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>))</span> line is drawn by considering <span class="math inline">1.5 * 10<sup>−2</sup><em>V</em><sup>2</sup><em>l</em><em>o</em><em>g</em>(<em>V</em>)</span>.</p>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/Approx_Error.svg" alt="Final Errors for Approximation" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/Approx_Error.svg" alt="Final Errors for Approximation" />
 <p class="caption">Final Errors for Approximation<span data-label="fig:Approx_ErrorBar"></span></p>
 </div></div>
 
@@ -161,27 +161,27 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <p>2-OPT performs a lot better than the Branch and Bound empirically. It quickly converges to a low error rate and computes the optimal tour.</p>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/LS1_D_Comparison.svg" alt="Performance of 2-OPT algorithm" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS1_D_Comparison.svg" alt="Performance of 2-OPT algorithm" />
 <p class="caption">Performance of 2-OPT algorithm<span data-label="fig:2OPT_Comparision"></span></p>
 </div></div>
 <p>Figure: [fig:2OPT_Comparision] shows the behavior with respect to time for different sizes of inputs. As the dimensions increase the final error rates increase, but remain manageable. In the 10 minute running time limits that we set, except for <em>Roanoke</em> other instances reach a solution within <span class="math inline">5.9%−0%</span> of the optimal solution.</p>
 <p>In order to better understand how quickly 2-OPT gets closer to the optimal solution, we measure the time when solution is within <span class="math inline">10%</span> of the optimal solution for different input dimensions. We also plot the QRTD and QSD for Toronto.</p>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/LS1_10pct.svg" alt="Time Taken to bring error below 10% by 2OPT" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS1_10pct.svg" alt="Time Taken to bring error below 10% by 2OPT" />
 <p class="caption">Time Taken to bring error below 10% by 2OPT<span data-label="fig:2OPT_10pct_comparision"></span></p>
 </div></div>
 <p>The above plot suggests that the time taken to achieve a maximum error(here <span class="math inline">10%</span>) is an exponential in input dimensions, which is understandable as we may have to Locally Search more random tours.</p>
 <div class="row">
 <div class="col-md-8">
-<img src="/images/2018-12-12-tsp/LS1_QRTD.svg" alt="2-OPT QRTD on Toronto (N=109)" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS1_QRTD.svg" alt="2-OPT QRTD on Toronto (N=109)" />
 <p class="caption">2-OPT QRTD on Toronto (N=109)<span data-label="fig:LS1_QRTD"></span></p>
 </div></div>
 
 <div class="row">
 
     <div class="col-md-8" >
-        <img src="/images/2018-12-12-tsp/LS1_SQD.svg" alt="2-OPT SQD on Toronto (N=109)" />
+        <img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS1_SQD.svg" alt="2-OPT SQD on Toronto (N=109)" />
         <p class="caption">2-OPT SQD on Toronto (N=109)<span data-label="fig:LS1_SQD"></span></p>
     </div>
 
@@ -192,7 +192,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-       <img src="/images/2018-12-12-tsp/LS1_error_time_boxplot_Toronto.svg" alt="Variation of Time to obtain certain errors for 2OPT while running on Toronto N=109" />
+       <img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS1_error_time_boxplot_Toronto.svg" alt="Variation of Time to obtain certain errors for 2OPT while running on Toronto N=109" />
         <p class="caption">Variation of Time to obtain certain errors for 2OPT while running on Toronto <span class="math inline"><em>N</em> = 109</span><span data-label="fig:LS1_Boxplot"></span></p>
     </div>
 
@@ -206,7 +206,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-    <img src="/images/2018-12-12-tsp/LS2_D_Comparison.svg" alt="Performance of Simulated Annealing" />
+    <img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS2_D_Comparison.svg" alt="Performance of Simulated Annealing" />
 <p class="caption">Performance of Simulated Annealing<span data-label="fig:SA_Comparision"></span></p>
     </div>
 
@@ -217,7 +217,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-    <img src="/images/2018-12-12-tsp/LS2_10pct.svg" alt="Time Taken to bring error below 10% by SA" />
+    <img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS2_10pct.svg" alt="Time Taken to bring error below 10% by SA" />
 
 <p class="caption">Time Taken to bring error below 10% by SA<span data-label="fig:SA_10pct_comparision"></span></p>
     </div>
@@ -230,7 +230,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-<img src="/images/2018-12-12-tsp/LS2_QRTD.svg" alt="Simulated Annealing QRTD on Toronto (N=109)" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS2_QRTD.svg" alt="Simulated Annealing QRTD on Toronto (N=109)" />
 <p class="caption">Simulated Annealing QRTD on Toronto (N=109)<span data-label="fig:SA_QRTD"></span></p>
     </div>
 
@@ -240,7 +240,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-<img src="/images/2018-12-12-tsp/LS2_SQD.svg" alt="Simulated Annealing SQD on Toronto (N=109)" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS2_SQD.svg" alt="Simulated Annealing SQD on Toronto (N=109)" />
 <p class="caption">Simulated Annealing SQD on Toronto (N=109)<span data-label="fig:SA_SQD"></span></p>
     </div>
 
@@ -251,7 +251,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-<img src="/images/2018-12-12-tsp/LS2_error_time_boxplot_Toronto.svg" alt="Variation of Time to obtain certain errors for SA while running on Toronto N=109" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/LS2_error_time_boxplot_Toronto.svg" alt="Variation of Time to obtain certain errors for SA while running on Toronto N=109" />
 <p class="caption">Variation of Time to obtain certain errors for SA while running on Toronto <span class="math inline"><em>N</em> = 109</span><span data-label="fig:LS2_Boxplot"></span></p>
     </div>
 
@@ -265,7 +265,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-<img src="/images/2018-12-12-tsp/H1_Error.svg" alt="Error rates of the Hybrid algorithm" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/H1_Error.svg" alt="Error rates of the Hybrid algorithm" />
 <p class="caption">Error rates of the Hybrid algorithm<span data-label="fig:H1_Comparision"></span></p>
     </div>
 
@@ -275,7 +275,7 @@ feature: "/images/2018-12-12-tsp/Salesman.png"
 <div class="row">
 
     <div class="col-md-8" >
-<img src="/images/2018-12-12-tsp/H1_10pct.svg" alt="Time Taken to bring error below 10% by the Hybrid" />
+<img src="{{ site.url }}{{ site.baseurl }}/images/2018-12-12-tsp/H1_10pct.svg" alt="Time Taken to bring error below 10% by the Hybrid" />
 <p class="caption">Time Taken to bring error below 10% by the Hybrid<span data-label="fig:H1_10pct"></span></p>
     </div>
 
